feat: ajout des fcts de check pour les dates et des vectors

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = EasyFind
+NAME = btc
 CPPC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
