--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
 		"typeinfo": "cpp",
 		"fstream": "cpp",
 		"iostream": "cpp",
-		"istream": "cpp"
+		"istream": "cpp",
+		"sstream": "cpp"
 	}
 }
