--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,27 @@
 		"fstream": "cpp",
 		"iostream": "cpp",
 		"istream": "cpp",
-		"sstream": "cpp"
+		"sstream": "cpp",
+		"strstream": "cpp",
+		"bitset": "cpp",
+		"chrono": "cpp",
+		"complex": "cpp",
+		"list": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp",
+		"valarray": "cpp",
+		"variant": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"condition_variable": "cpp",
+		"map": "cpp",
+		"set": "cpp",
+		"ratio": "cpp",
+		"iomanip": "cpp",
+		"mutex": "cpp",
+		"semaphore": "cpp",
+		"cfenv": "cpp",
+		"cinttypes": "cpp",
+		"typeindex": "cpp"
 	}
 }
